typescript/checker/tests/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            222,
        ),
        hi: BytePos(
            223,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.ts:4:9
  |
4 |     a = x; // error
  |         ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            310,
        ),
        hi: BytePos(
            311,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.ts:10:9
   |
10 |     a = x; // error
   |         ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            533,
        ),
        hi: BytePos(
            534,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/initializerReferencingConstructorParameters.ts:23:9
   |
23 |     b = x; // error
   |         ^

